--- a/themes/ivy/layouts/shortcodes/book.html
+++ b/themes/ivy/layouts/shortcodes/book.html
@@ -1,7 +1,7 @@
 {{ if .Get 3 }}
 <div class="book-item" style="margin-bottom:1rem;">
   <img class="book-image" src="{{ .Get 0 | safeURL }}" align="left" width="200" style="margin-right:20px">
-  <div class="book-details" style="margin-left:220px;">
+  <div class="book-details">
     <h3 class="title">
       <a href="" class="book-title-link">{{ .Get 1 | markdownify }}</a >
     </h3>
