--- a/themes/ivy/layouts/_default/books.html
+++ b/themes/ivy/layouts/_default/books.html
@@ -118,6 +118,8 @@
     <div class="sc-dIsUp fIuTG">
       {{range $idx, $book := $books}}
       {{if ne $idx 0 }}
+      {{ $coverSrc := index $item 5 }} 
+      {{ $douURL := replaceRE "https://book.douban.com/subject/([0-9]+)/" "https://dou.img.lithub.cc/book/$1.jpg" $coverSrc}}
       <div 
         class="sc-gKAaRy dfdORB" 
         data-year="{{index $book 11}}" 
@@ -127,7 +129,7 @@
         <a rel="link" href="{{index $book 5}}" target="_blank">
           <div class="sc-hKFxyN HPRth">
             <div class="lazyload-wrapper ">
-              <img class="avatar" src="{{index $book 3}}" referrer-policy="no-referrer" loading="lazy" alt="{{index $book 1}}" width="150" height="220">
+              <img class="avatar" src="{{$douURL}}" referrer-policy="no-referrer" loading="lazy" alt="{{index $book 1}}" width="150" height="220">
             </div>
           </div>
           <div class="sc-iCoGMd kMthTr">{{index $book 1}}</div>
