--- a/themes/ivy/layouts/_default/movies.html
+++ b/themes/ivy/layouts/_default/movies.html
@@ -124,6 +124,8 @@
     <div class="sc-dIsUp fIuTG">
       {{range $idx, $movie := $movies}}
       {{if ne $idx 0 }}
+      {{ $coverSrc := index $item 5 }} 
+      {{ $douURL := replaceRE "https://movie.douban.com/subject/([0-9]+)/" "https://dou.img.lithub.cc/movie/$1.jpg" $coverSrc}}
       <div 
         class="sc-gKAaRy dfdORB" 
         data-year="{{index $movie 11}}" 
@@ -134,7 +136,7 @@
         <a rel="link" href="{{index $movie 5}}" target="_blank">
           <div class="sc-hKFxyN HPRth">
             <div class="lazyload-wrapper ">
-              <img class="avatar" decoding="async" src="{{index $movie 3}}" referrer-policy="no-referrer" loading="lazy" alt="{{index $movie 1}}" width="150" height="220">
+              <img class="avatar" decoding="async" src="{{$douURL}}" referrer-policy="no-referrer" loading="lazy" alt="{{index $movie 1}}" width="150" height="220">
             </div>
           </div>
           <div class="sc-iCoGMd kMthTr">{{index $movie 1}}</div>
