--- a/themes/ivy/layouts/shortcodes/books.html
+++ b/themes/ivy/layouts/shortcodes/books.html
@@ -12,7 +12,7 @@
             <div class="sc-gKAaRy dfdORB">
                 <div class="sc-hKFxyN HPRth">
                     <div class="lazyload-wrapper ">
-                        <img class="avatar" src="{{index $book 3}}" referrer-policy="no-referrer" loading="lazy" alt="{{index $book 1}}"  title="{{index $book 9}}" width="150" height="220">
+                        <img class="avatar" src="{{$douURL}}" referrer-policy="no-referrer" loading="lazy" alt="{{index $book 1}}"  title="{{index $book 9}}" width="150" height="220">
                     </div>
                 </div>
             <div class="sc-fujyAs eysHZq">
