--- a/themes/ivy/layouts/_default/books.html
+++ b/themes/ivy/layouts/_default/books.html
@@ -118,7 +118,7 @@
     <div class="sc-dIsUp fIuTG">
       {{range $idx, $book := $books}}
       {{if ne $idx 0 }}
-      {{ $coverSrc := index $item 5 }} 
+      {{ $coverSrc := index $book 5 }} 
       {{ $douURL := replaceRE "https://book.douban.com/subject/([0-9]+)/" "https://dou.img.lithub.cc/book/$1.jpg" $coverSrc}}
       <div 
         class="sc-gKAaRy dfdORB" 
