--- a/themes/ivy/layouts/_default/movies.html
+++ b/themes/ivy/layouts/_default/movies.html
@@ -124,7 +124,7 @@
     <div class="sc-dIsUp fIuTG">
       {{range $idx, $movie := $movies}}
       {{if ne $idx 0 }}
-      {{ $coverSrc := index $item 5 }} 
+      {{ $coverSrc := index $movie 5 }} 
       {{ $douURL := replaceRE "https://movie.douban.com/subject/([0-9]+)/" "https://dou.img.lithub.cc/movie/$1.jpg" $coverSrc}}
       <div 
         class="sc-gKAaRy dfdORB" 
