--- a/themes/ivy/layouts/_default/bb.html
+++ b/themes/ivy/layouts/_default/bb.html
@@ -3,16 +3,22 @@
 <div id="bber"></div>
 <script type="text/javascript">
   var bbMemos = {
-    memos : 'https://bb.elizen.me/',//修改为自己的 apiurl，末尾有 / 斜杠
-    limit : '',//默认每次显示 10条 
-    creatorId:'' ,//默认为 101用户 https://demo.usememos.com/u/101
-    domId: '',//默认为 <div id="bber"></div>
+    memos : 'https://bb.elizen.me/',
+    limit : '',
+    creatorId:'' ,
+    domId: '',
+    twiEnv:'https://metk.edui.fun/',
   }
 </script>
-<script src="https://immmmm.com/bb-lmm-mk.js"></script>
-<script src="https://fastly.jsdelivr.net/npm/marked/marked.min.js"></script>
+<script src="https://fastly.jsdelivr.net/npm/marked@4.3.0/marked.min.js"></script>
 <script src="https://fastly.jsdelivr.net/gh/Tokinx/ViewImage/view-image.min.js"></script>
 <script src="https://fastly.jsdelivr.net/gh/Tokinx/Lately/lately.min.js"></script>
+<script src="https://fastly.jsdelivr.net/npm/aplayer@1.10.1/dist/APlayer.min.js"></script>
+<script src="https://fastly.jsdelivr.net/npm/meting@2.0.1/dist/Meting.min.js"></script>
+<script src="/twikoo1616.js"></script>
+<script src="https://unpkg.com/artalk@2/dist/ArtalkLite.js"></script>
+<script type="module" src="/emaction.js?v=2308071"></script>
+<script src="/bb-lmm-mk.js?v=230807"></script>
 
 <style>
 #bber{margin-top:2em;width:580px;}
