--- a/themes/ivy/layouts/_default/bb.html
+++ b/themes/ivy/layouts/_default/bb.html
@@ -3,17 +3,19 @@
 <div id="bber"></div>
 <script type="text/javascript">
   var bbMemos = {
-    memos : 'https://bb.elizen.me/',//修改为自己的 apiurl，末尾有 / 斜杠
-    limit : '',//默认每次显示 10条 
-    creatorId:'' ,//默认为 101用户 https://demo.usememos.com/u/101
-    domId: '',//默认为 <div id="bber"></div>
+    memos : 'https://bb.elizen.me/',
+    limit : '',
+    creatorId:'' ,
+    domId: '',
+    twiEnv:'https://pl.elizen.me/'
   }
 </script>
-<script src="https://immmmm.com/bb-lmm-mk.js"></script>
 <script src="https://fastly.jsdelivr.net/npm/marked/marked.min.js"></script>
 <script src="https://fastly.jsdelivr.net/gh/Tokinx/ViewImage/view-image.min.js"></script>
 <script src="https://fastly.jsdelivr.net/gh/Tokinx/Lately/lately.min.js"></script>
-
+<script src="https://fastly.jsdelivr.net/npm/twikoo@1.6.16/dist/twikoo.all.min.js"></script>
+<script type="module" src="https://immmmm.com/emaction.js?v=2308071"></script>
+<script src="https://immmmm.com/bb-lmm-mk.js?v=2308071"></script>
 <style>
 #bber{margin-top:2em;width:580px;}
 #bber pre{color: #fff;}
