--- a/themes/ivy/layouts/_default/bb.html
+++ b/themes/ivy/layouts/_default/bb.html
@@ -3,7 +3,7 @@
 <div id="bber"></div>
 <script type="text/javascript">
   var bbMemos = {
-    memos : 'http://memos.elizen.me/',
+    memos : 'https://memos.elizen.me/',
     limit : '',
     creatorId:'' ,
     domId: '',
