--- a/css/style.css
+++ b/css/style.css
@@ -10,7 +10,7 @@ html {
 body {
   /* Screen version */
   /* font-family: Palatino, "Palatino Linotype", "Palatino LT STD", 'source-han-serif-sc', 'Source Han Serif SC', 'Source Han Serif CN', 'Source Han Serif TC', 'Source Han Serif TW', 'Source Han Serif', 'Noto Serif CJK SC', 'Songti SC', 'Microsoft YaHei', serif; */
-  font-family: "Noto Serif",serif;
+  font-family: Georgia, STSong, serif;
 }
 
 *, *:before, *:after {
