update movie and book page img url

--- a/themes/ivy/layouts/_default/books.html
+++ b/themes/ivy/layouts/_default/books.html
@@ -129,7 +129,7 @@
         <a rel="link" href="{{index $book 5}}" target="_blank">
           <div class="sc-hKFxyN HPRth">
             <div class="lazyload-wrapper ">
-              <img class="avatar" src="{{$douURL}}" referrer-policy="no-referrer" loading="lazy" alt="{{index $book 1}}" width="150" height="220">
+              <img class="avatar" src="https://cors.immmmm.com/{{$douURL}}" referrer-policy="no-referrer" loading="lazy" alt="{{index $book 1}}" width="150" height="220">
             </div>
           </div>
           <div class="sc-iCoGMd kMthTr">{{index $book 1}}</div>
