--- a/themes/ivy/layouts/_default/movies.html
+++ b/themes/ivy/layouts/_default/movies.html
@@ -136,7 +136,7 @@
         <a rel="link" href="{{index $movie 5}}" target="_blank">
           <div class="sc-hKFxyN HPRth">
             <div class="lazyload-wrapper ">
-              <img class="avatar" decoding="async" src="{{$douURL}}" referrer-policy="no-referrer" loading="lazy" alt="{{index $movie 1}}" width="150" height="220">
+              <img class="avatar" decoding="async" src="https://cors.immmmm.com/{{$douURL}}" referrer-policy="no-referrer" loading="lazy" alt="{{index $movie 1}}" width="150" height="220">
             </div>
           </div>
           <div class="sc-iCoGMd kMthTr">{{index $movie 1}}</div>
