--- a/themes/ivy/layouts/partials/header.html
+++ b/themes/ivy/layouts/partials/header.html
@@ -17,8 +17,8 @@
     <!-- <script async src="/js/load-typekit.js"></script> -->
     <!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/combine/npm/@xiee/utils/css/circled-numbers.min.css"></link> -->
     <link rel="stylesheet" href="/css/custom.css"></link>
+    <link rel="stylesheet" href="https://memobbs.app/memos.css">
     <script type="text/javascript" src="/js/view-image.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
     <script>
     //图片灯箱
     window.ViewImage && ViewImage.init('.main img:not(.avatar,.tk-avatar-img)')
