--- a/css/custom.css
+++ b/css/custom.css
@@ -280,3 +280,14 @@ del:hover {
     padding-left: 10px;
   }
 }
+
+/* 年份分组样式 */
+.year-group {
+  width: 100%;
+  margin-top: 30px;
+  margin-bottom: 15px;
+  font-size: 1.5em;
+  font-weight: bold;
+  border-bottom: 1px solid #eee;
+  padding-bottom: 10px;
+}
