--- a/themes/ivy/layouts/_default/home.html
+++ b/themes/ivy/layouts/_default/home.html
@@ -10,6 +10,7 @@
 {{ else }}
 {{ $.Scratch.Set "pages" .Pages }}
 {{ end }}
+<div class="main archive">
 <ul>
   {{ range (where ($.Scratch.Get "pages") "Section" "posts") }}
   <li>
@@ -18,5 +19,6 @@
   </li>
   {{ end }}
 </ul>
+</div>
 
 {{ partial "footer-cus.html" . }}
