--- a/themes/ivy/static/css/custom.css
+++ b/themes/ivy/static/css/custom.css
@@ -287,7 +287,7 @@ del:hover {
   width: 100%;
   margin-top: 30px;
   margin-bottom: 15px;
-  font-size: 1.5em;
+  font-size: 20px;
   font-weight: bold;
   border-bottom: 1px solid #eee;
   padding-bottom: 10px;
