--- a/themes/ivy/layouts/partials/header.html
+++ b/themes/ivy/layouts/partials/header.html
@@ -22,6 +22,11 @@
     //图片灯箱
     window.ViewImage && ViewImage.init('.main img:not(.avatar,.tk-avatar-img)')
     </script>
+   {{ if not .Site.IsServer }}
+   <script src="{{ "js/markdown-image-parser.js" | absURL }}"></script>
+   {{ else }}
+   <script src="{{ "js/markdown-image-parser.js" | relURL }}"></script>
+   {{ end }}
     <script  src="https://jsd.cdn.zzko.cn/npm/quicklink@2.3.0/dist/quicklink.umd.js"></script>
     <script>window.addEventListener('load', () => {  quicklink.listen();});</script>
     <!-- require APlayer <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/aplayer/dist/APlayer.min.css"> <script src="https://cdn.jsdelivr.net/npm/aplayer/dist/APlayer.min.js"></script> -->
