--- a/themes/ivy/layouts/_default/movies.html
+++ b/themes/ivy/layouts/_default/movies.html
@@ -87,7 +87,7 @@
     });
   </script>
 <div class="lg:col-start-2 lg:col-span-6">
-  {{$movies := resources.Get "," "data/douban/movie.csv" }}
+  {{$books := resources.Get "data/douban/movie.csv" }}
   {{$scratch := newScratch}}
   {{$scratch.Add "genres" slice}}
   {{range $idx, $movie := $movies}}
