--- a/themes/ivy/layouts/_default/books.html
+++ b/themes/ivy/layouts/_default/books.html
@@ -87,7 +87,8 @@
     });
   </script>
 <div class="lg:col-start-2 lg:col-span-6">
-  {{$books := resources.GetRemote "data/douban/book.csv" | transform.Unmarshal }}
+  {{ $csv := resources.Get "data/douban/book.csv" }}
+  {{ $books := $csv | transform.Unmarshal }} 
   {{$scratch := newScratch}}
   {{$scratch.Add "genres" slice}}
   {{range $idx, $book := $books}}
