--- a/themes/ivy/layouts/shortcodes/movies.html
+++ b/themes/ivy/layouts/shortcodes/movies.html
@@ -1,12 +1,13 @@
 {{ $csv := resources.Get "data/douban/movie.csv" }}
-{{ $movies := $csv | transform.Unmarshal }} 
+{{ $movies := $csv | transform.Unmarshal }}  <!-- 确保 $movies 已经是一个列表 -->
 {{$numb := 5}}
 {{ if .Get 0 }}
     {{$numb = add (.Get 0) 1}}
 {{end}}
+
 <div class="sc-ksluID gFnzgG">
     <div class="sc-dIsUp fIuTG">
-        {{range $idx, $movie := first $movies $numb}}  <!-- 修改了这里 -->
+        {{range $idx, $movie := first $movies $numb}}  <!-- 确保 first 的参数顺序正确 -->
         {{if ne $idx 0 }}
             {{ $coverSrc := index $movie 5 }} 
             {{ $douURL := replaceRE "https://movie.douban.com/subject/([0-9]+)/" "https://dou.img.lithub.cc/movie/$1.jpg" $coverSrc}}
